# solana_wallet_adapter

./: .note  asset-manifest.json  index.html  package-lock.json  package.json
program-rust/: Cargo.toml
program/game-rule/src/: error.rs  state.rs
program/ticket/: Cargo.toml
program/ticket/src/: instruction.rs  lib.rs  processor.rs
program/ticket/src/processor/: create_ticket_auction.rs
s3-dapp-solana/: Anchor.toml  Cargo.toml  copy_idl.js  package-lock.json  package.json
s3-dapp-solana/app/: .env  craco.config.js  package-lock.json  package.json  tsconfig.json
s3-dapp-solana/app/solana-wallet/: keypair.json
s3-dapp-solana/hello-world-program/: Cargo.toml
s3-dapp-solana/tests/: s3-dapp-solana.ts
src/: App.tsx
src/api/: index.ts  nft.tsx  transaction.tsx
src/components/: Drawer.tsx  Navbar.tsx  NotificationToastify.tsx  RequestAirdropBtn.tsx
src/constants/: defaultWallet.ts
src/helper/: index.tsx
src/model/: GreetingAccount.ts  index.ts  metadata.ts
src/router/: Navigation.tsx
src/utils/: index.tsx  nftCreation.ts
static/css/: 2.38c64e37.chunk.css  2.38c64e37.chunk.css.map  main.11717e51.chunk.css  main.11717e51.chunk.css.map  main.c81dbb43.chunk.css  main.c81dbb43.chunk.css.map
static/js/: 2.5464aa2d.chunk.js  2.5464aa2d.chunk.js.LICENSE.txt  2.7bdda06b.chunk.js  3.b0b878a3.chunk.js  3.b0b878a3.chunk.js.map  4.8d3c6b65.chunk.js  4.8d3c6b65.chunk.js.map  main.4df32890.chunk.js  main.4df32890.chunk.js.map  runtime-main.0b114e00.js  runtime-main.0b114e00.js.map  runtime-main.6dfb33f6.js  runtime-main.6dfb33f6.js.map
(+57 files in other folders)
