[package]
name = "ticket"
version = "0.1.0"
edition = "2021"
description = "Solana Ticket Program"
authors = ["kietht <kietht@s3corp.com.vn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
thiserror = "1.0.24"

[lib]
name = "ticket"
crate-type = ["cdylib", "lib"]